--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,24 @@
-CC = arm-none-eabi-gcc
-CFLAGS = -c -mcpu=cortex-m4 -mthumb -Wall -O0
+PROG = blinky
 
-all: main.o startup.o
+CC = arm-none-eabi-gcc
+CFLAGS = -c -mcpu=cortex-m4 -mthumb 
+LD = arm-none-eabi-gcc
+CP = arm-none-eabi-objcopy
+LFLAGS = -nostdlib -T stm32f411-rom.ld
+
+OBJS = startup.o \
+	  main.o 
+
+all: $(PROG).elf
+
+$(PROG).elf: $(OBJS)
+	$(LD) $(LFLAGS) $^ -o $@
+	$(CP) $(PROG).elf -O binary $(PROG).bin
 
 %.o: %.c
-	$(CC) $(CFLAGS) -o $@ $^
+	$(CC) $(CFLAGS) $^ -o $@
+
+
 
 clean:
-	rm -f *.o	
+	rm -f $(OBJS) $(PROG).elf
